# RaCoT

./: LICENSE  MANIFEST.in  Makefile  README.md  README.zh-CN.md  pyproject.toml
RaCoT/: prompts.py  racot.py
config/: basic_config.yaml
examples/: minimal_racot_demo.py
pipeline/: pipeline.py
src/RaCoT/RaCoT/: prompts.py  racot.py
src/RaCoT/config/: __init__.py  basic_config.yaml  config.py
src/RaCoT/dataset/: __init__.py  dataset.py  utils.py
src/RaCoT/evaluator/: __init__.py  _bleu.py  evaluator.py  metrics.py
src/RaCoT/generator/: __init__.py  fid.py  generator.py  multimodal_generator.py  openai_generator.py  stop_word_criteria.py  utils.py
src/RaCoT/judger/: __init__.py  judger.py
src/RaCoT/pipeline/: __init__.py  pipeline.py
src/RaCoT/prompt/: __init__.py  base_prompt.py
src/RaCoT/refiner/: __init__.py  kg_refiner.py  llmlingua_compressor.py  refiner.py  selective_context_compressor.py
src/RaCoT/retriever/: __init__.py  encoder.py  index_builder.py  reranker.py  retriever.py  utils.py
src/RaCoT/tools/: __init__.py  __main__.py  cli.py  comment_policy.py  common.py  model_download.py  quality_gate.py  repo_hygiene.py
src/RaCoT/utils/: __init__.py  constants.py  pred_parse.py  utils.py
src/racot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
